Changes for 1.3.0:

- Update pom for CODAC 7.3

Changes for 1.2.0:

- Better cmake infrastructure
- Changed C++ standard to C++17

Changes for 1.1.0:

- Allow for uppercase variable names (disable case insensitivity)

Changes for 1.0.0:

- Initial version