@@ -27,7 +27,7 @@ set(LIBSOVERSION ${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR})
 # Directories
 # -----------------------------------------------------------------------------
 if(NOT DEFINED TEST_OUTPUT_DIRECTORY)
-  set(TEST_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test_bin)
+  set(TEST_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_bin)
 endif()
 
 file(MAKE_DIRECTORY ${TEST_OUTPUT_DIRECTORY})
