@@ -1,19 +1,22 @@
-add_executable(unit-tests)
+set(unit-tests sup-mathexpr-unit-tests)
 
-target_sources(unit-tests
+add_executable(${unit-tests})
+
+set_target_properties(${unit-tests} PROPERTIES OUTPUT_NAME "unit-tests")
+set_target_properties(${unit-tests} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${TEST_OUTPUT_DIRECTORY})
+
+target_sources(${unit-tests}
   PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/mathexpr_test.cpp
 )
 
-target_include_directories(unit-tests
+target_include_directories(${unit-tests}
   PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
 find_package(GTest REQUIRED)
 
-target_link_libraries(unit-tests PUBLIC GTest::GTest GTest::Main sup-mathexpr)
+target_link_libraries(${unit-tests} PUBLIC GTest::GTest GTest::Main sup-mathexpr)
 
-set_target_properties(unit-tests PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${TEST_OUTPUT_DIRECTORY})
-
-gtest_discover_tests(unit-tests)
+gtest_discover_tests(${unit-tests})
