@@ -1,5 +1,6 @@
 Changes for 1.3.0:
 
+- CMake changes to allow for pulling sup-protocol as a github dependency
 - Update pom for CODAC 7.3
 
 Changes for 1.2.0:
